@startuml
title Class diagram: async task web server

left to right direction

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 45
skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #334155
    ArrowColor #334155
}

hide empty members

package "application" {
    class ApplicationMain <<entry point>> {
        +main(argc, argv)
        +makeRequestHandler(...)
        +createWebServer(...)
    }

    class TaskApiHandler {
        +handle(request)
    }

    class ApplicationMetrics {
        +recordRequest()
        +recordResponse(status)
        +recordException()
        +toPrometheusText(...)
    }
}

package "server" {
    interface WebServer {
        +acceptLoop()
        +stop()
    }

    class HttpWebServer
    class HttpsWebServer

    abstract class HttpSessionBase {
        #processRequests(...)
    }

    class HttpSession {
        +run()
    }

    class HttpsSession {
        +run()
    }

    class HttpRequest

    class HttpResponse {
        +ok(...)
        +created(...)
        +badRequest(...)
        +notFound(...)
        +methodNotAllowed(...)
    }

    class StaticFileHandler {
        +handle(request)
    }

    class PublicFiles <<folder>> {
        public/
    }
}

package "tasks" {
    class TaskService {
        +create(input)
        +findAll()
        +findById(id)
        +update(id, input)
        +remove(id)
        +runNow(id)
    }

    class TaskRepository {
        +create(input)
        +findById(id)
        +findAll()
        +findScheduled()
        +update(id, input)
        +remove(id)
        +claimForExecution(id)
        +setStatus(id, status, error)
    }

    class TaskScheduler {
        +restore()
        +schedule(task)
        +cancel(id)
        +runNow(task)
        +metrics()
    }

    class TaskSchedulerMetrics
    class Task
    class TaskInput

    enum TaskStatus {
        kScheduled
        kRunning
        kCompleted
        kFailed
    }

    class SQLite <<database>>
}

ApplicationMain -right-> WebServer : creates
ApplicationMain -right-> TaskApiHandler : creates
ApplicationMain -right-> StaticFileHandler : creates
ApplicationMain -right-> ApplicationMetrics : creates
ApplicationMain -right-> TaskService : creates
ApplicationMain -right-> TaskScheduler : creates
ApplicationMain -right-> TaskRepository : creates

WebServer <|.. HttpWebServer
WebServer <|.. HttpsWebServer
HttpWebServer --> HttpSession : accepts
HttpsWebServer --> HttpsSession : accepts
HttpSessionBase <|-- HttpSession
HttpSessionBase <|-- HttpsSession
HttpSessionBase ..> HttpRequest : parses
HttpSessionBase ..> HttpResponse : writes
HttpSessionBase ..> TaskApiHandler : request callback
HttpSessionBase ..> StaticFileHandler : request callback

TaskApiHandler --> TaskService
TaskApiHandler ..> HttpResponse : JSON response
StaticFileHandler --> PublicFiles
StaticFileHandler ..> HttpResponse : file response

TaskService --> TaskRepository
TaskService --> TaskScheduler
TaskService ..> TaskInput
TaskScheduler --> TaskRepository
TaskScheduler ..> TaskSchedulerMetrics
TaskRepository --> SQLite
TaskRepository --> Task
Task --> TaskStatus
ApplicationMetrics ..> TaskSchedulerMetrics

@enduml
